...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final financeState = ref.watch(financeNotifierProvider);
    final themeMode = ref.watch(themeProvider);

    return AppScaffold(
      title: 'Dashboard',
      titleWidget: Row(
        children: [
          ClipRRect(
            borderRadius: BorderRadius.circular(8),
            child: Image.asset(
              'assets/images/app_logo.jpg',
...
